adjusted mvn settings